--- a/contacto.html
+++ b/contacto.html
@@ -45,10 +45,12 @@
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="servicios.html#mantenimiento">MANTENIMIENTO</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="servicios.html#verificacion">Verificación de básculas</a>
+                                <a class="dropdown-item" href="servicios.html#inspeccion">Inspección de básculas</a>
                             </div>
                         </li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="productos.html">Productos</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="clientes.html">Clientes</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="certificaciones.html">Certificaciones</a>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="contacto.html">Contacto</a></li>
                     </ul>
                 </div>
