--- a/index.html
+++ b/index.html
@@ -43,10 +43,12 @@
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="servicios.html#mantenimiento">MANTENIMIENTO</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="servicios.html#verificacion">Verificación de básculas</a>
+                                <a class="dropdown-item" href="servicios.html#inspeccion">Inspección de básculas</a>
                             </div>
                         </li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="productos.html">Productos</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="clientes.html">Clientes</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="certificaciones.html">Certificaciones</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="contacto.html">Contacto</a></li>
                     </ul>
                 </div>
@@ -86,36 +88,40 @@
         <!-- Certificaciones Section-->
         <section class="page-section portfolio text-center">
             <div class="container">
-                <!-- Portfolio Section Heading-->
+                <!-- Certificaciones Section Heading-->
                 <h2 class="page-section-heading text-center text-uppercase mb-0">Nuestras Certificaciones</h2>
                 
-                <!-- Icon Divider-->
+                <!-- Icon Divider 
                 <div class="divider-custom text-center">
-                    <div class="divider-custom-icon"><img src="assets/img/sello.PNG" width="29%" alt=""></div>
-                </div>
+                    <div class="divider-custom-icon"><img src="assets/img/sello.PNG" width="20%" alt=""></div>
+                </div> -->   
 
-                <p class="masthead-subheading mb-0">Contamos con unidades de verficación acreditadas por <b>EMA</b> y aprobadas por <b>PROFECO</b>.</p>
+                <!-- Icon Divider -->
+                <div class="divider-custom">
+                    <div class="divider-custom-line"></div>
+                    <img src="assets/img/sello.PNG" width="45rem" alt="">
+                    <div class="divider-custom-line"></div>
+                </div> 
 
-                <!-- Portfolio Grid Items-->
-                <div class="row justify-content-center">
-                    <!-- Portfolio Item 1-->
-                    <div class="col-md-6 col-lg-4 mb-5 d-none d-lg-block">
+
+                <p class="masthead-subheading mb-0">Servicios de calibración e inspección acreditadas ante <b>EMA</b> y autorizadas por <b>PROFECO</b>.</p>
+                <br><a class="btn btn-primary btn-xl2" href="certificaciones.html">Ver más</a>
+
+
+                <!-- Certificaciones Grid Items-->
+                <div class="row justify-content-center" style="margin-top: 2rem;" >
+                    <!-- Certificaciones Item 1-->
+                    <div class="col-md-6 col-lg-4 mb-5 d-none d-lg-block" >
                         <div class="mx-auto">
-                            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                                <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
-                            </div>
                             <img class="img-fluid" src="assets/img/certificacion1.png" alt="..." />
                         </div>
                     </div>
-                    <!-- Portfolio Item 2-->
+                    <!-- Certificaciones Item 2 -->
                     <div class="col-md-6 col-lg-4 mb-5 d-none d-lg-block">
                         <div class="mx-auto">
-                            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                                <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
-                            </div>
                             <img class="img-fluid" src="assets/img/certificacion2.png" alt="..." />
                         </div>
-                    </div>                    
+                    </div>                  
                 </div>
             </div>
         </section>
@@ -124,17 +130,16 @@
         <section class="page-section bg-success text-white mb-0" id="about">
             <div class="container">
                 <!-- About Section Heading-->
-                <h2 class="page-section-heading text-center text-uppercase text-white">Mas sobre nosotros</h2>
+                <h2 class="page-section-heading text-center text-uppercase text-white">Conoce a nuestros clientes</h2>
                 <br>
                 <!-- About Section Content-->
                 <div class="row text-center">
-                    <p class="lead">Ofrecemos servicios integrales de calibración de instrumentos en magnitudes como: 
-                    </p>
-                    <p class="lead">Masa, Temperatura, Presion, Fuerza, Volumen, Flujo y Dimensional</p>
+                    <p class="lead">En SEMEC de México, trabajamos con nuestros clientes todos los días con la firme intención de ayudarles a resolver sus necesidades e inquietudes.</p>
+                    <p class="lead">Nos sentimos orgullos de servir a cada uno de ellos, desde operadores propietarios hasta corporaciones multinacionales, en una amplia variedad de industrias.</p>
                 </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
-                    <a class="btn btn-xl btn-outline-light" href="nosotros.html">Leer mas</a>
+                    <a class="btn btn-xl btn-outline-light" href="clientes.html">Mas información</a>
                 </div>
             </div>
         </section>
@@ -213,7 +218,7 @@
                     </div>
                 </div><br><br>
                 <div class="d-flex justify-content-end">
-                    <a href="productos.html" class="btn Btnvertodos">Ver todos</a>
+                    <a href="productos.html" class="btn btn-primary btn-xl2" style="margin-right: 10px;">Ver todos</a>
                 </div>
             </div>
         </section>
@@ -273,8 +278,9 @@
                                     <li><p class="masthead-subheading mb-0">Contamos con personal altamente capacitado y nuestra experiencia nos respalda.</p></li><br>
                                     <li><p class="masthead-subheading mb-0">Trabajamos para una amplia gama de concreteras en México.</p></li>
                                 </ul>
-
+                                
                                 <div class="d-flex align-items-end justify-content-end">
+                                    <br><br><br><br>
                                     <small>
                                         <b>Nota:</b><span style="margin-left: 5px;">Nuestro equipo patrón esta calibrado con trazabilidad hacia el CENAM.</span>
                                     </small>
