--- a/productos.html
+++ b/productos.html
@@ -44,10 +44,12 @@
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="servicios.html#mantenimiento">MANTENIMIENTO</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="servicios.html#verificacion">Verificación de básculas</a>
+                                <a class="dropdown-item" href="servicios.html#inspeccion">Inspección de básculas</a>
                             </div>
                         </li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="productos.html">Productos</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="clientes.html">Clientes</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="certificaciones.html">Certificaciones</a>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="contacto.html">Contacto</a></li>
                     </ul>
                 </div>
@@ -72,7 +74,7 @@
                 <div class="row justify-content-center">
 
                     <!-- Productos Item 1 -->
-                    <div class="col-lg-4 mb-5 mb-lg-0">
+                    <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto">
                             <div class="card">  
                                 <div class="producto-item">
@@ -89,7 +91,7 @@
                     </div> 
 
                     <!-- Productos Item 2-->
-                    <div class="col-lg-4 mb-5 mb-lg-0">
+                    <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto">
                             <div class="card">
                                 <img class="card-img-top" src="assets/img/portfolio/balanzasAnaliticas.PNG" alt="Card image cap">
@@ -109,7 +111,7 @@
                     </div>
 
                     <!-- Portfolio Item 3-->
-                    <div class="col-lg-4 mb-5 mb-lg-0">
+                    <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto">
                             <div class="card" >
                                 <img class="card-img-top" src="assets/img/portfolio/celdasdecarga.PNG" alt="Card image cap">
@@ -128,10 +130,8 @@
                         </div>
                     </div>
 
-                    <div class="w-100"></div><br>
-
                     <!-- Portfolio Item 4-->
-                    <div class="col-lg-4 mb-5 mb-lg-0">
+                    <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
                         <div class="portfolio-item mx-auto">
                             <div class="card" >
                                 <img class="card-img-top" src="assets/img/portfolio/indicadoresdepeso.PNG" alt="Card image cap">
@@ -151,7 +151,7 @@
                     </div>
                     
                     <!-- Portfolio Item 5-->
-                    <div class="col-lg-4 mb-5 mb-lg-0">
+                    <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
                         <div class="portfolio-item mx-auto">
                             <div class="card" >
                                 <img class="card-img-top" src="assets/img/portfolio/basculas.PNG" alt="Card image cap">
@@ -172,7 +172,7 @@
                     </div>
                     
                     <!-- Portfolio Item 6-->
-                    <div class="col-lg-4 mb-5 mb-lg-0">
+                    <div class="col-md-6 col-lg-4">
                         <div class="portfolio-item mx-auto">
                             <div class="card">
                                 <img class="card-img-top" src="assets/img/portfolio/valvulas.PNG" alt="Card image cap">
