--- a/servicios.html
+++ b/servicios.html
@@ -45,10 +45,12 @@
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="servicios.html#mantenimiento">MANTENIMIENTO</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="servicios.html#verificacion">Verificación de básculas</a>
+                                <a class="dropdown-item" href="servicios.html#inspeccion">Inspección de básculas</a>
                             </div>
                         </li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="productos.html">Productos</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="clientes.html">Clientes</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="certificaciones.html">Certificaciones</a>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="contacto.html">Contacto</a></li>
                     </ul>
                 </div>
@@ -290,13 +292,13 @@
             </div>
         </section>
 
-        <!-- Verificacion de basculas Section-->
-        <section class="page-section portfolio mb-5" id="verificacion">
+        <!-- inspeccion de basculas Section-->
+        <section class="page-section portfolio mb-5" id="inspeccion">
             <div class="container">
-                <!-- verificacion Section Heading-->
-                <h2 class="page-section-heading2 text-center text-uppercase mb-0 text-secondary">Verificacion de básculas</h2><br>
+                <!-- inspeccion Section Heading-->
+                <h2 class="page-section-heading2 text-center text-uppercase mb-0 text-secondary">Inspección de básculas</h2><br>
 
-                <!-- verificacion Grid Items-->
+                <!-- inspeccion Grid Items-->
                 <div class="row justify-content-center">
                     <div class="col-lg-9">
                         <div class="row justify-content-center">
@@ -313,7 +315,7 @@
                                 <div class="divider-custom-line3"></div>
                                 <ul>
                                     <li><p class="mb-0">Ofrecemos servicio de verificación a básculas en bajo, mediano y alto alcance utilizadas para transacción comercial.</p></li><br>
-                                    <li><p class="mb-0">La unidad esta acreditada ante <b>PROFECO</b>.</p></li>
+                                    <li><p class="mb-0">La unidad de inspección esta acreditada ante <b>EMA UVIM 208 </b>y<b> PROFECO</b>.</p></li>
                                 </ul>
                             </div>
                         </div>
