--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
 
                 <p class="masthead-subheading mb-0">Servicios de calibración e inspección acreditadas ante <b>EMA</b> y autorizadas por <b>PROFECO</b>.</p>
-                <br><a class="btn btn-primary btn-xl2" href="certificaciones.html">Ver más</a>
+                <br><a class="btn Btnvertodos btn-xl2" href="certificaciones.html">Ver más</a>
 
 
                 <!-- Certificaciones Grid Items-->
@@ -218,7 +218,7 @@
                     </div>
                 </div><br><br>
                 <div class="d-flex justify-content-end">
-                    <a href="productos.html" class="btn btn-primary btn-xl2" style="margin-right: 10px;">Ver todos</a>
+                    <a href="productos.html" class="btn Btnvertodos btn-xl2" style="margin-right: 10px;">Ver todos</a>
                 </div>
             </div>
         </section>
