--- a/index.html
+++ b/index.html
@@ -89,55 +89,54 @@
         <section class="page-section portfolio text-center">
             <div class="container">
                 <!-- Certificaciones Section Heading-->
-                <h2 class="page-section-heading text-center text-uppercase mb-0">Nuestras Certificaciones</h2>
+                <br><h2 class="page-section-heading text-center text-uppercase mb-0">Nuestras Certificaciones</h2>
                 
-                <!-- Icon Divider 
+                <!-- Icon Divider --> 
                 <div class="divider-custom text-center">
-                    <div class="divider-custom-icon"><img src="assets/img/sello.PNG" width="20%" alt=""></div>
-                </div> -->   
+                    <div class="divider-custom-icon"><img src="assets/img/sello.PNG" width="22%" alt=""></div>
+                </div>   
 
-                <!-- Icon Divider -->
+                <!-- Icon Divider 
                 <div class="divider-custom">
                     <div class="divider-custom-line"></div>
                     <img src="assets/img/sello.PNG" width="45rem" alt="">
                     <div class="divider-custom-line"></div>
-                </div> 
+                </div> -->
 
 
                 <p class="masthead-subheading mb-0">Servicios de calibración e inspección acreditadas ante <b>EMA</b> y autorizadas por <b>PROFECO</b>.</p>
-                <br><a class="btn Btnvertodos btn-xl2" href="certificaciones.html">Ver más</a>
+                <br><a class="btn Btnvertodos btn-xl2" href="certificaciones.html">Ver más</a><br><br>
 
 
-                <!-- Certificaciones Grid Items-->
+                <!-- Certificaciones Grid Items
                 <div class="row justify-content-center" style="margin-top: 2rem;" >
-                    <!-- Certificaciones Item 1-->
                     <div class="col-md-6 col-lg-4 mb-5 d-none d-lg-block" >
                         <div class="mx-auto">
                             <img class="img-fluid" src="assets/img/certificacion1.png" alt="..." />
                         </div>
                     </div>
-                    <!-- Certificaciones Item 2 -->
                     <div class="col-md-6 col-lg-4 mb-5 d-none d-lg-block">
                         <div class="mx-auto">
                             <img class="img-fluid" src="assets/img/certificacion2.png" alt="..." />
                         </div>
                     </div>                  
                 </div>
+                -->
             </div>
         </section>
 
-        <!-- About Section-->
-        <section class="page-section bg-success text-white mb-0" id="about">
+        <!-- Clientes Section-->
+        <section class="page-section bg-success text-white mb-0" id="clientes">
             <div class="container">
-                <!-- About Section Heading-->
+                <!-- Clientes Section Heading-->
                 <h2 class="page-section-heading text-center text-uppercase text-white">Conoce a nuestros clientes</h2>
                 <br>
-                <!-- About Section Content-->
+                <!-- Clientes Section Content-->
                 <div class="row text-center">
                     <p class="lead">En SEMEC de México, trabajamos con nuestros clientes todos los días con la firme intención de ayudarles a resolver sus necesidades e inquietudes.</p>
                     <p class="lead">Nos sentimos orgullos de servir a cada uno de ellos, desde operadores propietarios hasta corporaciones multinacionales, en una amplia variedad de industrias.</p>
                 </div>
-                <!-- About Section Button-->
+                <!-- Clientes Section Button-->
                 <div class="text-center mt-4">
                     <a class="btn btn-xl btn-outline-light" href="clientes.html">Mas información</a>
                 </div>
@@ -223,8 +222,26 @@
             </div>
         </section>
 
+        <!-- About Section-->
+        <section class="page-section bg-success text-white mb-0" id="about">
+            <div class="container">
+                <!-- About Section Heading-->
+                <h2 class="page-section-heading text-center text-uppercase text-white">MAS SOBRE NOSOTROS</h2>
+                <br>
+                <!-- About Section Content-->
+                <div class="row text-center">
+                    <p class="lead">Ofrecemos servicios integrales de calibración de instrumentos en magnitudes como:</p>
+                    <p class="lead">Masa, Temperatura, Presion, Fuerza, Volumen, Flujo y Dimensional</p>
+                </div>
+                <!-- About Section Button-->
+                <div class="text-center mt-4">
+                    <a class="btn btn-xl btn-outline-light" href="nosotros.html">Leer mas</a>
+                </div>
+            </div>
+        </section>
+
         <!-- Otros productos y costos Section-->
-        <section class="page-section2 portfolio text-center">
+        <section class="page-section portfolio text-center">
             <div class="container">
                 <!-- otros productos y costos Grid Items-->
                 <div class="row justify-content-center">
