--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
 
                 <p class="masthead-subheading mb-0">Servicios de calibración e inspección acreditadas ante <b>EMA</b> y autorizadas por <b>PROFECO</b>.</p>
-                <br><a class="btn Btnvertodos btn-xl2" href="certificaciones.html">Ver más</a><br><br>
+                <br><a class="btn Btnvertodos btn-xl" href="certificaciones.html">Ver más</a><br><br>
 
 
                 <!-- Certificaciones Grid Items
