--- a/contacto.html
+++ b/contacto.html
@@ -92,7 +92,7 @@
                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3764.279811041037!2d-99.0801174854708!3d19.35703328692733!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1fd932218ac75%3A0xac150a3063860827!2sCjon.%20de%20las%20flores%2047%2C%20San%20Miguel%2C%20Iztapalapa%2C%2009360%20Ciudad%20de%20M%C3%A9xico%2C%20CDMX!5e0!3m2!1sen!2smx!4v1624648910309!5m2!1sen!2smx" width="80%" height="50%" style="border:0;" allowfullscreen="" loading="lazy"></iframe> 
                         </div>
                     </div>
-                    <div class="col-lg-5">
+                    <div class="col-lg-5 d-none d-lg-block">
                         <div class="colContact2">
                             <img class="img-fluid" src="assets/img/recepcionista1.jpg" alt="..." />
                         </div>
@@ -114,7 +114,7 @@
                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3703.0222102548005!2d-102.2646407854233!3d21.85667898555578!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8429edf16e6ded1f%3A0xbcc3b42946da0f99!2sCorregidora%20602%2C%20Morelos%20I%2C%2020140%20Aguascalientes%2C%20Ags.!5e0!3m2!1sen!2smx!4v1624649308557!5m2!1sen!2smx" width="80%" height="50%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>              
                         </div>
                     </div>
-                    <div class="col-lg-5">
+                    <div class="col-lg-5  d-none d-lg-block">
                         <div class="colContact2">
                             <img class="img-fluid" src="assets/img/recepcionista2.jpg" alt="..." />
                         </div>
