--- a/contacto.html
+++ b/contacto.html
@@ -114,22 +114,22 @@
                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3703.0222102548005!2d-102.2646407854233!3d21.85667898555578!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8429edf16e6ded1f%3A0xbcc3b42946da0f99!2sCorregidora%20602%2C%20Morelos%20I%2C%2020140%20Aguascalientes%2C%20Ags.!5e0!3m2!1sen!2smx!4v1624649308557!5m2!1sen!2smx" width="80%" height="50%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>              
                         </div>
                     </div>
-                    <div class="col-lg-5  d-none d-lg-block">
+                    <div class="col-lg-5 d-none d-lg-block">
                         <div class="colContact2">
                             <img class="img-fluid" src="assets/img/recepcionista2.jpg" alt="..." />
                         </div>
                     </div>
-                </div><br><br>
 
-                <div class="row d-flex justify-content-center align-items-center">
-                    <h4 class="row text-secondary text-uppercase"><b>Contactános a traves de nuestros emails</b></h4>
-                    <div class="col-10 colContact3">
-                        <p>servicio@semec.mx</p>
-                        <p>ventas@semec.mx</p>
-                        <p>ventas-bajio@Semec.mx</p>
+                    <div class="col-lg-10" style="margin-top: 2.5rem;">
+                        <h4 class="text-uppercase text-secondary"><b>Contactános a traves de nuestros emails</b></h4>
+                        <div class="colContact">
+                            <p>servicio@semec.mx</p>
+                            <p>ventas@semec.mx</p>
+                            <p>ventas-bajio@Semec.mx</p>
+                        </div>
                     </div>
                 </div>
-
+                
             </div>
         </section>
 
