--- a/certificaciones.html
+++ b/certificaciones.html
@@ -104,7 +104,7 @@
                             
                         </div>
                         -->
-                        <div class="row gx-0" style="border: 1px solid red;">
+                        <div class="row gx-0">
                             <div class="col-lg-6">
                                 <a class="cert-item" href="#!">
                                     <div class="caption">
