Cambio de imagenes

--- a/contacto.html
+++ b/contacto.html
@@ -94,7 +94,7 @@
                     </div>
                     <div class="col-lg-5 d-none d-lg-block">
                         <div class="colContact2">
-                            <img class="img-fluid" src="assets/img/recepcionista1.jpg" alt="..." />
+                            <img class="img-fluid" src="assets/img/contacto cdmx.jpg" alt="contacto cdmx" />
                         </div>
                     </div>
 
@@ -116,7 +116,7 @@
                     </div>
                     <div class="col-lg-5 d-none d-lg-block">
                         <div class="colContact2">
-                            <img class="img-fluid" src="assets/img/recepcionista2.jpg" alt="..." />
+                            <img class="img-fluid" src="assets/img/contacto ags 2.jpg" alt="contacto ags" />
                         </div>
                     </div>
 
