--- a/servicios.html
+++ b/servicios.html
@@ -117,7 +117,7 @@
                                     <div class="caption">
                                         <div class="caption-content"></div>
                                     </div>
-                                    <img class="img-fluid" src="assets/img/servicios/instrumento1.jpg" style="width: 100%; height: 100%;" alt="..." />
+                                    <img class="img-fluid" src="assets/img/servicios/calibracion basculas.jpg" style="width: 100%; height: 100%;" alt="..." />
                                 </div>
                             </div>
                             <div class="col-md-7" style="padding: 1rem;">
@@ -149,7 +149,7 @@
                                     <div class="caption">
                                         <div class="caption-content"></div>
                                     </div>
-                                    <img class="img-fluid" src="assets/img/servicios/pesas2.png" style="width: 100%; height: 100%;" alt="..." />
+                                    <img class="img-fluid" src="assets/img/servicios/pesas.jpg" style="width: 100%; height: 100%;" alt="..." />
                                 </div>
                             </div>
                             <div class="col-md-7" style="padding: 1rem;">
@@ -213,7 +213,7 @@
                                     <div class="caption">
                                         <div class="caption-content"></div>
                                     </div>
-                                    <img class="img-fluid" src="assets/img/servicios/presion.png" style="width: 100%; height: 100%;" alt="..." />
+                                    <img class="img-fluid" src="assets/img/servicios/calibracion valvulas.jpg" style="width: 100%; height: 100%;" alt="calibración de valvulas" />
                                 </div>
                             </div>
                             <div class="col-md-7" style="padding: 1rem;">
@@ -245,7 +245,7 @@
                                     <div class="caption">
                                         <div class="caption-content"></div>
                                     </div>
-                                    <img class="img-fluid" src="assets/img/servicios/temperatura4.png" style="width: 100%; height: 100%;" alt="..." />
+                                    <img class="img-fluid" src="assets/img/servicios/temperatura.jpg" style="width: 100%; height: 100%;" alt="temperatura" />
                                 </div>
                             </div>
                             <div class="col-md-7" style="padding: 1rem;">
