--- a/index.html
+++ b/index.html
@@ -312,7 +312,9 @@
                             <div class="d-flex align-items-end justify-content-end">
                                 <br><br><br><br>
                                 <small>
-                                        <b>Nota:</b><span style="margin-left: 5px;">Nuestro equipo patrón esta calibrado con trazabilidad hacia el CENAM.</span>
+                                        <b>Nota:</b><span > Nuestro equipo patrón esta calibrado con trazabilidad hacia el CENAM.</span>
+                                        <!-- <b>Nota:</b><span style="margin-left: 5px;">Nuestro equipo patrón esta calibrado con trazabilidad hacia el CENAM.</span> -->
+
                                     </small>
                             </div>
 
