--- a/index.html
+++ b/index.html
@@ -2,11 +2,19 @@
 <html lang="en">
 
 <head>
+
+    <title>Contacto | SEMEC Calibraciónes</title>
+    <meta name="description" content="Ponte en contacto con nosotros, TODO México calibra con SEMEC">
+    <meta name="author" content="SEMEC calibraciónes de México">
+    <meta name="keywords" content="calibrar bascula, calibracion, calibracion de fuerza, calibracion de pesas, calibracion de instrumentos para pesar, calibracion en presion, calibracion de temperatura, inspeccion de basculas" />
+    <meta name="robots" content="index,follow" />
+    <meta name="google" content="notranslate" />
+    <link rel="canonical" href="https://semec.com.mx/" />
+
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>SEMEC</title>
+
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/logo.ico" />
     <!-- Font Awesome icons (free version)-->
