--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
             </div>
         </div>
     </nav>
+    <br>
 
     <!-- Carousel-->
     <header class="masthead text-white text-center" id="portfolio">
@@ -99,8 +100,8 @@
     <section class="page-section portfolio text-center">
         <div class="container">
             <!-- Certificaciones Section Heading-->
-            <br>
-            <h2 class="page-section-heading text-center text-uppercase mb-0">Nuestras Certificaciones</h2>
+
+            <h1 class="page-section-heading text-center text-uppercase mb-0">Nuestras Certificaciones</h1>
 
             <!-- Icon Divider -->
             <div class="divider-custom text-center">
@@ -144,7 +145,7 @@
             <br>
             <!-- Clientes Section Content-->
             <div class="row text-center">
-                <p class="lead">En SEMEC de México, trabajamos con nuestros clientes todos los días con la firme intención de ayudarles a resolver sus necesidades e inquietudes.</p>
+                <p class="lead">En SEMEC CALIBRACIONES S.A. DE C.V., trabajamos con nuestros clientes todos los días con la firme intención de ayudarles a resolver sus necesidades e inquietudes.</p>
                 <p class="lead">Nos sentimos orgullos de servir a cada uno de ellos, desde operadores propietarios hasta corporaciones multinacionales, en una amplia variedad de industrias.</p>
             </div>
             <!-- Clientes Section Button-->
@@ -153,7 +154,7 @@
             </div>
         </div>
     </section>
-
+    <br><br>
     <!-- Productos Section-->
     <section class="page-section portfolio" id="portfolio">
         <div class="container">
@@ -227,7 +228,7 @@
                     </div>
                 </div>
             </div><br><br>
-            <div class="d-flex justify-content-end">
+            <div class="d-flex justify-content-center">
                 <a href="productos.html" class="btn Btnvertodos btn-xl2" style="margin-right: 10px;">Ver todos</a>
             </div>
         </div>
@@ -250,6 +251,7 @@
             </div>
         </div>
     </section>
+    <br><br>
 
     <!-- Otros productos y costos Section-->
     <section class="page-section portfolio text-center">
