--- a/servicios.html
+++ b/servicios.html
@@ -24,6 +24,10 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
         <div class="container">
+
+
+
+
             <a class="navbar-brand" href="index.html"> <img src="assets/img/logo.png" width="65px" alt=""> SEMEC</a>
             <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">                    <i class="fas fa-bars"></i>
                 </button>
@@ -62,6 +66,19 @@
     <!-- Calibración de sistemas de pesaje en Tolvas Section-->
     <section class="masthead2 page-section portfolio" id="tolvas">
         <div class="container">
+
+
+            <!-- Portfolio Section Heading-->
+            <h1 class="page-section-heading text-center text-secondary text-uppercase mb-0">Nuestros Servicios</h1>
+
+            <!-- Icon Divider-->
+            <div class="divider-custom">
+                <div class="divider-custom-line"></div>
+                <img src="assets/img/users.gif" width="90rem" alt="">
+                <div class="divider-custom-line"></div>
+            </div>
+
+
             <!-- Calibración de sistemas de pesaje en Tolvas Section Heading-->
             <h2 class="page-section-heading2 text-center text-uppercase mb-0 text-secondary">Calibración de sistemas de pesaje en Tolvas</h2><br>
 
