--- a/contacto.html
+++ b/contacto.html
@@ -64,11 +64,11 @@
         <div class="container contContacto">
             <!-- Contacto Section Heading-->
 
-            <h2 class="page-section-heading text-center text-secondary text-uppercase mb-0">Contacto</h2>
+            <h1 class="page-section-heading text-center text-secondary text-uppercase mb-0">Contacto</h1>
             <!-- Icon Divider-->
             <div class="divider-custom">
                 <div class="divider-custom-line2"></div>
-                <img src="assets/img/contacto.gif" width="60rem" alt="">
+                <img src="assets/img/contacto.gif" width="60rem" alt="gif">
                 <div class="divider-custom-line2"></div>
             </div>
             <br>
